tests/files/flow_controller_tests/should_fail/093.cmdr
x = false;
print arccot(x);